--- a/apps/web/templates/pageStyles.ts.hbs
+++ b/apps/web/templates/pageStyles.ts.hbs
@@ -1,3 +1,3 @@
-import { styled } from '@stitches/react';
+import { styled } from 'stitches/stitches.config';
 
 export const Styled{{pascalCase name}} = styled('div', {});
