--- a/apps/web/pages/styles.css
+++ b/apps/web/pages/styles.css
@@ -12,6 +12,10 @@ body {
   line-height: inherit;
   margin: 0;
 }
+
+a:hover {
+  text-decoration: underline;
+}
 h1,
 h2,
 p,
@@ -41,7 +45,6 @@ pre {
 }
 svg {
   display: block;
-  vertical-align: middle;
   shape-rendering: auto;
   text-rendering: optimizeLegibility;
 }
