--- a/apps/web/pages/styles.css
+++ b/apps/web/pages/styles.css
@@ -1,3 +1,5 @@
+@import url("https://use.typekit.net/uhm1qvw.css");
+
 html {
   -webkit-text-size-adjust: 100%;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
@@ -6,6 +8,7 @@ html {
   line-height: 1.5;
   tab-size: 4;
   scroll-behavior: smooth;
+  font-family: "poppins", sans-serif;
 }
 body {
   font-family: inherit;
