--- a/apps/web/pages/styles.css
+++ b/apps/web/pages/styles.css
@@ -1,12 +1,12 @@
-@import url("https://use.typekit.net/uhm1qvw.css");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 html {
   -webkit-text-size-adjust: 100%;
- 
+
   line-height: 1.5;
   tab-size: 4;
   scroll-behavior: smooth;
-  font-family: "poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 body {
   font-family: inherit;
