--- a/packages/ui/templates/styles.ts.hbs
+++ b/packages/ui/templates/styles.ts.hbs
@@ -1,3 +1,3 @@
-import { styled } from '../stitches.config';
+import { style } from '@vanilla-extract/css';
 
-export const Styled{{pascalCase name}} = styled('{{element}}', {});
+export const {{camelCase name}}Style = style({});
