chore: update plop files

--- a/packages/ui/templates/Component.tsx.hbs
+++ b/packages/ui/templates/Component.tsx.hbs
@@ -1,11 +1,9 @@
 import * as React from 'react';
 
-import { {{camelCase name}}Style } from "./{{pascalCase name}}.css";
-
 interface {{pascalCase name}}Props {}
 
 const {{pascalCase name}} = ({}: {{pascalCase name}}Props) => {
-  return <{{element}} className={ {{~camelCase name}}Style}>{{name}}</{{element}}>;
+  return <{{element}}>{{name}}</{{element}}>;
 };
 
 export default {{pascalCase name}};
