--- a/apps/admin/templates/Component.tsx.hbs
+++ b/apps/admin/templates/Component.tsx.hbs
@@ -1,11 +1,9 @@
 import React from "react";
 
-import { {{camelCase name}}Style } from "./{{pascalCase name}}.css";
-
 interface {{pascalCase name}}Props {}
 
 const {{pascalCase name}} = ({}: {{pascalCase name}}Props) => {
-  return <{{#if element}}{{element}}{{else}}div{{/if}} className={ {{~camelCase name}}Style}>{{name}}</{{#if element}}{{element}}{{else}}div{{/if}}>;
+  return <{{#if element}}{{element}}{{else}}div{{/if}}>{{name}}</{{#if element}}{{element}}{{else}}div{{/if}}>;
 };
 
 export default {{pascalCase name}};
