--- a/apps/web/pages/styles.css
+++ b/apps/web/pages/styles.css
@@ -132,7 +132,8 @@ h1 {
 .editor-container {
   margin: 20px auto 20px auto;
   border-radius: 2px;
-  max-width: 600px;
+  width: 100%;
+  max-width: 800px;
   color: #000;
   position: relative;
   line-height: 20px;
@@ -149,15 +150,11 @@ h1 {
 }
 
 .editor-input {
-  min-height: 150px;
   resize: none;
   font-size: 15px;
-  caret-color: rgb(5, 5, 5);
   position: relative;
   tab-size: 1;
   outline: 0;
-  padding: 15px 10px;
-  caret-color: #444;
 }
 
 .editor-placeholder {
@@ -165,8 +162,8 @@ h1 {
   overflow: hidden;
   position: absolute;
   text-overflow: ellipsis;
-  top: 15px;
-  left: 10px;
+  top: 0px;
+  left: 0px;
   font-size: 15px;
   user-select: none;
   display: inline-block;
@@ -266,6 +263,7 @@ pre::-webkit-scrollbar-thumb {
 
 .toolbar {
   display: flex;
+  justify-content: center;
   margin-bottom: 1px;
   padding: 4px;
   border-top-left-radius: 10px;
@@ -315,7 +313,7 @@ pre::-webkit-scrollbar-thumb {
 }
 
 .toolbar .toolbar-item:hover:not([disabled]) {
-  background-color: #eee;
+  background-color: #1e1e1e;
 }
 
 .toolbar .divider {
