fix: admin site ui refactor

--- a/apps/admin/pages/styles.css
+++ b/apps/admin/pages/styles.css
@@ -25,30 +25,7 @@
   body {
     font-family: inherit;
     line-height: inherit;
-    margin: 0;
     position: relative;
-  }
-  h1,
-  h2,
-  p,
-  pre {
-    margin: 0;
-  }
-  *,
-  ::before,
-  ::after {
-    box-sizing: border-box;
-    border-width: 0;
-    border-style: solid;
-    border-color: currentColor;
-  }
-  h1,
-  h2 {
-    font-size: inherit;
-    font-weight: inherit;
-  }
-  a {
-    color: inherit;
-    text-decoration: inherit;
+    background-color: #0b0a0a;
   }
 }
